--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
+    <link
+    href=”https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css”
+    rel=”stylesheet”>
   </head>
   <body>
     <app-root></app-root>
